--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="css/career.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Dr+Sugiyama&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>Code Genics</title>
