--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <!-- logo -->
         <div class="logo">
             <a href="/index.html">
-                <img src="image/logo.png" alt="">
+                <img src="logo.png" alt="">
             </a>
         </div>        
 
