--- a/career.html
+++ b/career.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/service.css">
-    <link rel="stylesheet" href="css/career.css">
+    <link rel="stylesheet" href="career.css">
     <link rel="stylesheet" href="css/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Dr+Sugiyama&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -20,7 +20,7 @@
         <!-- logo -->
         <div class="logo">
             <a href="/index.html">
-                <img src="image/logo.png" alt="">
+                <img src="logo.png" alt="">
             </a>
         </div>        
 
