--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="css/career.css">
     <link rel="stylesheet" href="css/contact.css">
@@ -20,7 +20,7 @@
         <!-- logo -->
         <div class="logo">
             <a href="/index.html">
-                <img src="image/logo.png" alt="">
+                <img src="logo.png" alt="">
             </a>
         </div>        
 
