--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,7 @@
         <div>
             <div id="location">
                 <div id="googlemapscontact">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13991.937549135155!2d77.1411825!3d28.7498831!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa67b9b7cca53a4da!2sCode%20Genics!5e0!3m2!1sen!2sin!4v1591275792334!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeiFdh4TVb0r4_X_p-CkRzbY2ZmEItTXouaQ8UL7xu4hrKzXA/viewform?embedded=true" width="640" height="943" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                </div>
                 <div id="addresscontact">
                     <p>B-85 <br>
                     Yadav Nagar, <br>
